Start working on project

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.0/modern-normalize.min.css" integrity="sha512-3axTZ/bKFZH5/qLFTl4U+mDbBDFW+5QO5L7D1HnOhlhJbcNDIVJxoNm6It77g0eUdzfKZlHirayqRC2qJaAOJw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Fullstack Developer - Heorhii Honcharov</title>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Manrope:wght@400..700&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Fullstack Developer - Heorhii Honcharov</title>
     <meta name="description" content="Heorhii Honcharov - Fullstack Developer skilled in React, Node.js, JavaScript, and TypeScript. Experienced in building dynamic web applications and creating efficient, scalable backend systems. Passionate about coding, problem-solving, and continuous learning." />
 
   </head>
